--- a/README.Rmd
+++ b/README.Rmd
@@ -29,7 +29,7 @@ For API documentation and FAQs, see:
 
 ```{r echo=FALSE, results='asis'}
 if ('github_document' == rmarkdown::all_output_formats(knitr::current_input()) && !knitr:::is_html_output()) 
-   cat('For more information visit the [web page](https://moviedo5.github.io/esios2fd) of the package.')
+   cat('For more information visit the web page [https://moviedo5.github.io/esios2fda-site/](https://moviedo5.github.io/esios2fda-site/) of the package.')
 ```
 
 ### `r paste("Version", packageVersion("esios2fd"))`
@@ -88,7 +88,7 @@ library(esios2fd)
 
 ## Fist setps
 
-```{r example-lfdata, eval=TRUE, include=FALSE}
+```{r example-lfdata, eval=FALSE, include=FALSE}
 source("../esios_data/apikey_esios.txt")
 ```
 
@@ -149,12 +149,11 @@ png("figures/apagon2025.png",
 plot(out1,
      ylim = c(1.3e5, 4e5),
      ylab = "Demand (MWh)"
-     # main = "Forecasted vs. Scheduled Demand\nIberian Blackout April 28 2025"
+     # main = "Forecasted vs. Scheduled Demand\nIberian Blackout April 25-28 2025"
 )
 
-# Línea vertical en el momento del apagón
-abline(v = as.POSIXct("2025-04-28 12:33", tz = "Europe/Madrid"),
-       col = "blue", lwd = 2, lty = 2)
+#abline(v = as.POSIXct("2025-04-28 12:33", tz = "Europe/Madrid"),
+ #      col = "blue", lwd = 2, lty = 2)
 
 # Leyenda
 legend("bottom",
@@ -183,8 +182,8 @@ out2 <- esios2lfdata(
 plot(out2, ylim=c(1e4,35e3), ylab="MWh")
 ```
 
-```{r fig:blackout, echo=FALSE, out.width='100%', fig.cap="Forecasted vs. Scheduled Demand — Iberian Blackout April 28 2025"}
-knitr::include_graphics("figures/apagon2025.png")
+```{r fig:blackout, echo=FALSE, out.width='100%', fig.cap="Forecasted vs. Scheduled Demand — Iberian Blackout April 25-28 2025"}
+knitr::include_graphics("docs/figures/apagon2025.png")
 ```
 
 <!--
