Update Readme with install code information

--- a/README.Rmd
+++ b/README.Rmd
@@ -58,23 +58,17 @@ For more details, visit the [website](https://moviedo5.github.io/esios2fd) of th
 
 ## Installation
 
-
-- If you downloaded it manually:
+You can install the pre-built Windows binary directly from the GitHub Pages site:
 
 ```r
-install.packages("path/to/zip/esios2fd_0.2.0.zip",
-                 repos = NULL, type = "win.binary")
-```                       
-
-- Or install directly from GitHub:
-```r
-remotes::install_github(
-  "moviedo5/esios2fd-site",
-  subdir = ".",
-  repos   = NULL,
-  type    = "win.binary"
+install.packages(
+  "https://github.com/moviedo5/esios2fda-site/raw/main/esios2fd_0.2.0.zip",
+  repos = NULL,
+  type  = "win.binary"
 )
- ```                       
+```
+
+        
                         
 ```{r include=FALSE}
 # Create .nojekyll file in the /docs folder
